syntax = "proto3";
package idl;
option go_package = "../internal/rpc/rpcGen";

message User {
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
}

message Video {
  int64 id = 1;
  User author = 2;
  string play_url = 3;
  string cover_url = 4;
  int64 favorite_count = 5;
  int64 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
}

message PublishActionRequest {
  int64 user_id = 1;
  bytes data = 2;
  string title = 3;
}

message PublishActionResponse {
  int32 status_code = 1;
  string status_msg = 2;
}

message QueryPublishListRequest {
  int64 user_id = 1;
  string token = 2;
}

message QueryPublishListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated Video video_list = 3;
}

service PublishService{
  rpc PublishAction(PublishActionRequest) returns (PublishActionResponse){}
  rpc QueryPublishList(QueryPublishListRequest) returns (QueryPublishListResponse) {}
}

